fix: workaround for header overflow #6

--- a/projects/demo-maps/src/styles.scss
+++ b/projects/demo-maps/src/styles.scss
@@ -1,2 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 @import "styles/ukis-theme";
+
+/**
+ * set Clarity header to scroll for overflow
+ * remove this if Issue (https://github.com/vmware/clarity/issues/3843) is fixed!
+ *
+ * @media screen and (min-width: 768px) and (max-width:1170px)
+ */
+
+$max-header-width: 1170px; // CSS native variables not working in media queries
+@media screen and (min-width: 768px + 1) and (max-width: $max-header-width) {
+  .header-1 {
+    overflow-x: auto;
+    overflow-y: hidden;
+    height: 3.7rem;
+  }
+}
